# 2022_2_MOND

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_client  Dockerfile_server  README.md  docker-compose.yml  main.cpp
.github/workflows/: CI.yml  Tests.yml
AccessController/: AccessController.h  CMakeLists.txt  IAccessController.h
Backupper/: Backupper.h  CMakeLists.txt  IBackupper.h
BoostIFace/: BoostIFace.cpp  BoostIFace.hpp  CMakeLists.txt
CMake/: clangformat.cmake  coverage.cmake
ClientDB/: ActionManager.h  CMakeLists.txt  Connector.h  IActionManager.h  IConnector.h  main.cpp
ConnectionHander/: CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.hpp
ConnectionHandler/: CMakeLists.txt  ConnectionHandler.h  IConnectionHandler.h  IWorker.h  genericObjectFactory.h
ConnectionWorker/: CMakeLists.txt  ConnectionWorker.cpp  ConnectionWorker.hpp
DBCore/: CMakeLists.txt  Hashes.h  IHashTable.h  ITableStorage.h  QuadraticProbingTable.h  TableStorage.h
DockerFiles/: Dockerfile_client_1  Dockerfile_client_2  Dockerfile_client_3  Dockerfile_client_4  Dockerfile_client_5  Dockerfile_server
Initializer/: CMakeLists.txt  Initializer.h
InterfaceDB/: CMakeLists.txt  HTAllocator.h  HashTable.h  Hashes.h  IHashTable.h  ITableStorage.h  QuadraticProbingTable.h  TableStorage.h
InternalEntities/: CMakeLists.txt  InternalEntities.h
Serializer/: CMakeLists.txt  ISerializer.h  Serializer.h
ServerDB/: CMakeLists.txt  Dockerfile  main.cpp
Tests/: CMakeLists.txt  tests.cpp
Tests/AccessController/: CMakeLists.txt  Tests_AccessController.h  Tests_AccessManager.h  tests.cpp
Tests/Backupper/: CMakeLists.txt  Tests_Backupper.h  help_for_tests.h  tests.cpp
Tests/ClientDB/: CMakeLists.txt  Tests_Serializer.h  help_for_tests.h  tests.cpp
Tests/ConnectionHandler/: CMakeLists.txt  MockEntities.h  Tests_ConnectionHandler.h  Tests_IStorageUsageByWorker.h  Tests_ITableUsageByWorker.h  Tests_Worker.h  Tests_WorkerFactory.h  tests.cpp
Tests/ConnectionWorkerTests/: CMakeLists.txt  tests.cpp
Tests/HashTable/: CMakeLists.txt  Tests_HashTable_Clear.h  Tests_HashTable_Find.h  Tests_HashTable_Get.h  Tests_HashTable_Insert.h  Tests_HashTable_Remove.h  Tests_HashTable_Size.h  Tests_HashTable_Update.h  help_for_tests.h  tests.cpp
Tests/Initializer/: CMakeLists.txt  tests.cpp
Tests/PerformanceClient/: CMakeLists.txt  client.cpp
Tests/Request_Serializer/: CMakeLists.txt  Tests_Serializer.h  help_for_tests.h
Tests/Serializer/: CMakeLists.txt  Tests_Serializer.h  help_for_tests.h  tests.cpp
Tests/TableStorage/: CMakeLists.txt  Tests_Storage_Create.h  Tests_Storage_Delete.h  Tests_Storage_Get.h  Tests_Storage_GetKeys.h  Tests_TableStorage.h  help_for_tests.h  tests.cpp
Tests/TablesLogic/: CMakeLists.txt  Tests_DB_Find.h  Tests_DB_Insert.h  Tests_DB_Remove.h  Tests_DB_Size.h  Tests_DB_Update.h  Tests_HashTable.h  Tests_HashTable_Clear.h  Tests_HashTable_Get.h  help_for_tests.h  tests.cpp
artefacts/: README.md
linters/: linters.sh
project/: CMakeLists.txt
project/ClientDB/: CMakeLists.txt
project/ClientDB/LibConnector/: CMakeLists.txt  Connector.hpp
project/ClientDB/Tests/: CMakeLists.txt  tests.cpp
project/ClientDB/headers/: header.hpp
project/ClientDB/sources/: main.cpp
project/ServerDB/: CMakeLists.txt
project/ServerDB/LibConnector/: CMakeLists.txt  Connector.cpp
project/ServerDB/Tests/: CMakeLists.txt
project/ServerDB/headers/: header.hpp
project/ServerDB/sources/: main.cpp  source.cpp
scripts/linters/: linters.sh
