cmake_minimum_required(VERSION 3.23)
project(AccessController CXX)

file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} INTERFACE)

target_include_directories(${PROJECT_NAME} PUBLIC INTERFACE ${ENTITIES_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} INTERFACE ${ENTITIES_LIBRARIES})

set(ACCESS_CONTROLLER_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(ACCESS_CONTROLLER_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
