cmake_minimum_required(VERSION 3.23)
project(Initializer CXX)

if (DEBUG_BUILD)
    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -ftest-coverage -O0")
endif ()

file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

find_package(Boost COMPONENTS thread REQUIRED)

add_library(${PROJECT_NAME} INTERFACE)

target_include_directories(${PROJECT_NAME} PUBLIC INTERFACE ${Boost_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} INTERFACE Boost::thread)

target_include_directories(${PROJECT_NAME} PUBLIC INTERFACE ${CONNECTION_HANDLER_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} INTERFACE ${CONNECTION_HANDLER_LIBRARIES})

set(INITIALIZER_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(INITIALIZER_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
