cmake_minimum_required(VERSION 3.0)
project(InterfaceDB CXX)

if (BUILD_FOR_TEST)
    set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -ftest-coverage -O0")
endif ()

file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} INTERFACE)

set(HASHTABLE_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(HASHTABLE_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)